2005-02-24 nalin
	* configure.ac: add a --enable-default-keytab-location flag.
	* src/options.c,src/pam_krb5.5.in,src/pam_krb5.8.in: obey it.
	* README: document that it can be overridden.  (Don't want to change
	this to README.in to actually reflect that override value.)
	* src/v4.c(v4_get_creds): error out if password is NULL or zero-length.
	* src/v5.c(v5_get_creds): provide the prompter callback to libkrb5.
	* src/options.c: add an "initial_prompt"/"no_initial_prompt" option
	which suppresses the initial password prompt.  It's useless for
	providing a PAM_AUTHTOK to subsequent modules, but is useful now that
	we're providing a prompter callback to libkrb5.
	* src/auth.c: handle no_initial_prompt cases.  Get AFS tokens if the
	saved password turned out to be correct.
	* src/log.c: fix a few memory leaks.
	* src/harness.c: add, to make debugging easier.
2005-02-23 nalin
	* src/init.c: don't call initialize_krb5_error_table; this currently
	leads to a crash due to libkrb5 from MIT's 1.4 release making an
	invalid assumption about e2fsprogs 1.36's libcom_err (SF #1150146)
2005-02-14 nalin
	* src/stash.c,src/stash.h: add a field to the stash structure for
	keeping of whether or not we set the KRB5CCNAME/KRBTKFILE environment
	variables
	* src/session.c: clear KRB5CCNAME/KRBTKFILE if we're removing the
	files *and* we set the variables.  Treat zero-length values as we
	treate NULL values for those variables.
2005-02-08 nalin
	* src/afs5log.c: properly screen out "dynroot" as a cell name, walk up
	from the user's home directory if we can't determine in which cell it
	is that it resides

2005-02-08 nalin
	* src/acct.c: treat a KRB5KDC_ERR_PREAUTH_FAILED error as if it were
	a KRB5KRB_AP_ERR_BAD_INTEGRITY error.
	* README,src/pam_krb5.5.in,src/pam_krb5.8.in: doc updates.

2005-02-08 nalin
	* src/userinfo.c,src/userinfo.h: look up and make note of the user's
	home directory.
	* src/tokens.c(tokens_obtain): attempt to determine the cell in which