@@ -1,5 +1,7 @@
 - 2.2: refreshing of preexisting credentials works, so unlocking your
-  screensaver should fetch new credentials and tokens.
+  screensaver should fetch new credentials and tokens.  Be careful that you
+  don't invoke the authentication function with the "tokens" flag, which
+  creates a new PAG, if you want this to be useful.
 - 2.1: switch to a minikafs implementation to flush out lurking ABI differences
   between the krb4 interface the kafs library used and the one which libkrb4
   provides.  Also, we support "2b" tokens now.
